--- a/index.html
+++ b/index.html
@@ -308,11 +308,11 @@
     </div>
   </section>
   <footer>
-    Footer by Nghiem
+    Footer by bin
   </footer>
+
 
   <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 </body>
 
 </html>
-
